add_executable(LinkList LinkList.cpp)
add_executable(List List.cpp)
add_executable(Queue Queue.cpp)
add_executable(Stack Stack.cpp)
add_executable(DuLinkList DuLinkList.cpp)
add_executable(Tree Tree.cpp)
add_executable(Vector Vector.cpp)
add_executable(HuffMan HuffMan.cpp)
add_executable(Graph Graph.cpp)


